# qt2

src/: CMakeLists.txt
